--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
 server.port=8090
+
+# LOGGING
+logging.file=var/logs/myapp.log
+logging.level.=INFO
