--- a/pom.xml
+++ b/pom.xml
@@ -54,18 +54,20 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-<!-- web library -->
-	<!-- bootstrap -->
+<!-- web library 
+	 bootstrap 
 	<dependency>
 	    <groupId>org.webjars</groupId>
 	    <artifactId>bootstrap</artifactId>
 	    <version>3.2.0</version>
 	</dependency>    
-	<!-- jquery -->
+	 jquery 
 	<dependency>
 	    <groupId>org.webjars</groupId>
 	    <artifactId>jquery</artifactId>
 	    <version>2.1.1</version>
 	</dependency>
+-->
   </dependencies>
+
 </project>
