--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
     <!-- embeded database -->
     <dependency>
 	    <groupId>org.hsqldb</groupId>
